Fix sentence error parsed at Pride and Prejudice

--- a/src/books/pride-and-prejudice/15.html
+++ b/src/books/pride-and-prejudice/15.html
@@ -1,5 +1,5 @@
 <h1>CHAPTER XV.</h1>
-<p class="nind">MR. COLLINS was not a sensible man, and the deficiency of nature had
+<p class="nind">Mr. Collins was not a sensible man, and the deficiency of nature had
     been but little assisted by education or society; the greatest part of
     his life having been spent under the guidance of an illiterate and
     miserly father; and though he belonged to one of the universities, he
