--- a/src/books/pride-and-prejudice/20.html
+++ b/src/books/pride-and-prejudice/20.html
@@ -1,5 +1,5 @@
 <h1>CHAPTER XX.</h1>
-<p class="nind">MR. COLLINS was not left long to the silent contemplation of his
+<p class="nind">Mr. Collins was not left long to the silent contemplation of his
     successful love; for Mrs. Bennet, having dawdled about in the vestibule
     to watch for the end of the conference, no sooner saw Elizabeth open the
     door and with quick step pass her towards the staircase, than she
