--- a/src/books/pride-and-prejudice/50.html
+++ b/src/books/pride-and-prejudice/50.html
@@ -1,5 +1,5 @@
 <h1>CHAPTER L.</h1>
-<p class="nind">MR. BENNET had very often wished, before this period of his life, that,
+<p class="nind">Mr. Bennet had very often wished, before this period of his life, that,
     instead of spending his whole income, he had laid by an annual sum, for
     the better provision of his children, and of his wife, if she survived
     him. He now wished it more than ever. Had he done his duty in that
