--- a/src/books/pride-and-prejudice/53.html
+++ b/src/books/pride-and-prejudice/53.html
@@ -1,5 +1,5 @@
 <h1>CHAPTER LIII.</h1>
-<p class="nind">MR. WICKHAM was so perfectly satisfied with this conversation, that he
+<p class="nind">Mr. Wickham was so perfectly satisfied with this conversation, that he
     never again distressed himself, or provoked his dear sister Elizabeth,
     by introducing the subject of it; and she was pleased to find that she
     had said enough to keep him quiet.</p>
