--- a/src/books/pride-and-prejudice/7.html
+++ b/src/books/pride-and-prejudice/7.html
@@ -1,5 +1,5 @@
 <h1><br/><br/>CHAPTER VII.</h1>
-<p class="nind">MR. BENNET’S property consisted almost entirely in an estate of two
+<p class="nind">Mr. Bennet’s property consisted almost entirely in an estate of two
     thousand a year, which, unfortunately for his daughters, was entailed,
     in default of heirs male, on a distant relation; and their mother’s
     fortune, though ample for her situation in life, could but ill supply
