--- a/src/books_generated/pride-and-prejudice/15.html
+++ b/src/books_generated/pride-and-prejudice/15.html
@@ -1,5 +1,5 @@
 <h1>CHAPTER XV.</h1>
-<p class="nind"><b><s id="1">1</s><i>MR</i>. <i>COLLINS</i> <i>was</i> <i>not</i> <i>a</i> <i>sensible</i> <i>man</i>, <i>and</i> <i>the</i> <i>deficiency</i> <i>of</i> <i>nature</i> <i>had</i>
+<p class="nind"><b><s id="1">1</s>Mr. <i>Collins</i> <i>was</i> <i>not</i> <i>a</i> <i>sensible</i> <i>man</i>, <i>and</i> <i>the</i> <i>deficiency</i> <i>of</i> <i>nature</i> <i>had</i>
 <i>been</i> <i>but</i> <i>little</i> <i>assisted</i> <i>by</i> <i>education</i> <i>or</i> <i>society</i>; <i>the</i> <i>greatest</i> <i>part</i> <i>of</i>
 <i>his</i> <i>life</i> <i>having</i> <i>been</i> <i>spent</i> <i>under</i> <i>the</i> <i>guidance</i> <i>of</i> <i>an</i> <i>illiterate</i> <i>and</i>
 <i>miserly</i> <i>father</i>; <i>and</i> <i>though</i> <i>he</i> <i>belonged</i> <i>to</i> <i>one</i> <i>of</i> <i>the</i> <i>universities</i>, <i>he</i>
