--- a/src/books_generated/pride-and-prejudice/20.html
+++ b/src/books_generated/pride-and-prejudice/20.html
@@ -1,5 +1,5 @@
 <h1>CHAPTER XX.</h1>
-<p class="nind"><b><s id="1">1</s><i>MR</i>. <i>COLLINS</i> <i>was</i> <i>not</i> <i>left</i> <i>long</i> <i>to</i> <i>the</i> <i>silent</i> <i>contemplation</i> <i>of</i> <i>his</i>
+<p class="nind"><b><s id="1">1</s>Mr. <i>Collins</i> <i>was</i> <i>not</i> <i>left</i> <i>long</i> <i>to</i> <i>the</i> <i>silent</i> <i>contemplation</i> <i>of</i> <i>his</i>
 <i>successful</i> <i>love</i>; <i>for</i> Mrs. <i>Bennet</i>, <i>having</i> <i>dawdled</i> <i>about</i> <i>in</i> <i>the</i> <i>vestibule</i>
 <i>to</i> <i>watch</i> <i>for</i> <i>the</i> <i>end</i> <i>of</i> <i>the</i> <i>conference</i>, <i>no</i> <i>sooner</i> <i>saw</i> <i>Elizabeth</i> <i>open</i> <i>the</i>
 <i>door</i> <i>and</i> <i>with</i> <i>quick</i> <i>step</i> <i>pass</i> <i>her</i> <i>towards</i> <i>the</i> <i>staircase</i>, <i>than</i> <i>she</i>
