--- a/src/books/pride-and-prejudice/2.html
+++ b/src/books/pride-and-prejudice/2.html
@@ -1,6 +1,6 @@
 <h1>CHAPTER II.
 </h1>
-<p class="nind">MR. BENNET was among the earliest of those who waited on Mr. Bingley. He
+<p class="nind">Mr. Bennet was among the earliest of those who waited on Mr. Bingley. He
     had always intended to visit him, though to the last always assuring his
     wife that he should not go; and till the evening after the visit was
     paid she had no knowledge of it. It was then disclosed in the following
