--- a/src/books/pride-and-prejudice/26.html
+++ b/src/books/pride-and-prejudice/26.html
@@ -1,5 +1,5 @@
 <h1>CHAPTER XXVI.</h1>
-<p class="nind">MRS. GARDINER’S caution to Elizabeth was punctually and kindly given on
+<p class="nind">Mrs. Gardiner’s caution to Elizabeth was punctually and kindly given on
     the first favourable opportunity of speaking to her alone: after
     honestly telling her what she thought, she thus went on:—</p>
 <p>“You are too sensible a girl, Lizzy, to fall in love merely because you
