--- a/src/books/pride-and-prejudice/29.html
+++ b/src/books/pride-and-prejudice/29.html
@@ -1,5 +1,5 @@
 <h1>CHAPTER XXIX.</h1>
-<p class="nind">MR. COLLINS’S triumph, in consequence of this invitation, was complete.
+<p class="nind">Mr. Collins’s triumph, in consequence of this invitation, was complete.
     The power of displaying the grandeur of his patroness to his wondering
     visitors, and of letting them see her civility towards himself and his
     wife, was exactly what he had wished for; and that an opportunity of
